fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/Education_Contractor__c.object-meta.xml
<CustomObject>
    <label>Education Contractor</label>
    <nameField>
        <displayFormat>EC-{000000}</displayFormat>
        <label>Education Contractor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education Contractors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>