fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/CE_Reimbursement_Expense__c.field-meta.xml
<CustomField>
    <fullName>CE_Reimbursement_Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CE Reimbursement/Expense</label>
    <referenceTo>CE_Reimbursement_Expense__c</referenceTo>
    <relationshipLabel>Education Contractors</relationshipLabel>
    <relationshipName>Education_Contractors</relationshipName>
    <type>Lookup</type>
</CustomField>