fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/CEM__c.field-meta.xml
<CustomField>
    <fullName>CEM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEM</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Education Contractors</relationshipLabel>
    <relationshipName>Education_Contractors</relationshipName>
    <type>Lookup</type>
</CustomField>