fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/Contractor_Profile__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Filtered on only Contractor and not ACE or CE Profiles</inlineHelpText>
    <label>Contractor Profile</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. The profile selected must be active and a contractor record type.</errorMessage>
        <filterItems>
            <field>Profile__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Contractor</value>
        </filterItems>
        <filterItems>
            <field>Profile__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Profile__c</referenceTo>
    <relationshipLabel>Education Contractors</relationshipLabel>
    <relationshipName>Education_Contractors</relationshipName>
    <type>Lookup</type>
</CustomField>