fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/Education_Record__c.field-meta.xml
<CustomField>
    <fullName>Education_Record__c</fullName>
    <label>Education Record</label>
    <referenceTo>Education_Record__c</referenceTo>
    <relationshipLabel>Education Contractors</relationshipLabel>
    <relationshipName>Education_Contractors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>