fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding/Prof. Development (Hour)</fullName>
            </value>
            <value>
                <fullName>Inservice (Hour)</fullName>
            </value>
            <value>
                <fullName>Product Implementation (Hour)</fullName>
            </value>
            <value>
                <fullName>Speaking Engagements (Hour)</fullName>
            </value>
            <value>
                <fullName>Conference Support (Hour)</fullName>
            </value>
            <value>
                <fullName>Consulting (Hour)</fullName>
            </value>
            <value>
                <fullName>Procedural Program - Physician (Day)</fullName>
            </value>
            <value>
                <fullName>Procedural Program - MD Prof. Dev (Day)</fullName>
            </value>
            <value>
                <fullName>Procedural Program - Lead (Day)</fullName>
            </value>
            <value>
                <fullName>Procedural Program - Faculty (Day)</fullName>
            </value>
            <value>
                <fullName>Procedural Program - Prof. Dev (Day)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>