fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>TEXT(Contractor_Profile__r.Pay_Rate_Card__r.Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>