fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/Notification_Workflow_Fired__c.field-meta.xml
<CustomField>
    <fullName>Notification_Workflow_Fired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This gets checked by the Education Contractor workflows “CE – EC No Travel Required Notification” and “CE – EC Travel Required Notification” when the workflows fire.</description>
    <label>Notification Workflow Fired</label>
    <type>Checkbox</type>
</CustomField>