fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/Pay_Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Rate Card</label>
    <referenceTo>Pay_Profile__c</referenceTo>
    <relationshipLabel>Education Contractors</relationshipLabel>
    <relationshipName>Education_Contractors</relationshipName>
    <type>Lookup</type>
</CustomField>