fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/RCEM__c.field-meta.xml
<CustomField>
    <fullName>RCEM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RCEM</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Education Contractors (RCEM)</relationshipLabel>
    <relationshipName>Education_Contractors1</relationshipName>
    <type>Lookup</type>
</CustomField>