fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/Reimbursement_Rate__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reimbursement Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>