fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <formula>TEXT(Contractor_Profile__r.Pay_Rate_Card__r.Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role</label>
    <type>Text</type>
</CustomField>