fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Education Contractors (Sales Manager)</relationshipLabel>
    <relationshipName>Education_Contractors3</relationshipName>
    <type>Lookup</type>
</CustomField>