fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Education Contractors (Sales Rep)</relationshipLabel>
    <relationshipName>Education_Contractors2</relationshipName>
    <type>Lookup</type>
</CustomField>