fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>/* No Profile */
if(ISBLANK(Contractor_Profile__c),
IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Missing Profile!&quot;) &amp;
&quot; Missing Profile!&quot;,

/* No Reimbursement Rate */
if(ISBLANK(TEXT(Engagement_Type__c)),
IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Engagement Type!&quot;) &amp;
&quot; Engagement Type!&quot;,

/* No Reimbursement Rate */
if(OR(ISBLANK(Reimbursement_Rate__c),Reimbursement_Rate__c = 0),
IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Missing Rate!&quot;) &amp;
&quot; Missing Rate!&quot;,

/* Missing Email */
if(ISBLANK(Email__c),
IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Missing Email!&quot;) &amp;
&quot; Missing Email!&quot;,

/* All Good! */
IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;All Good!&quot;) &amp;
&quot; All Good!&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checks to make sure that the rate is greater than zero and that email and profile fields are not blank.</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>