fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/Status_Filter__c.field-meta.xml
<CustomField>
    <fullName>Status_Filter__c</fullName>
    <formula>if(
OR(
/* No Profile */ 
ISBLANK(Contractor_Profile__c), 

/* No Reimbursement Rate */ 
OR(ISBLANK(Reimbursement_Rate__c),Reimbursement_Rate__c = 0), 

/* Missing Email */ 
ISBLANK(Email__c)
),
TRUE, 

/* All Good! */ 
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Filter</label>
    <type>Checkbox</type>
</CustomField>