fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/travel_email_sent__c.field-meta.xml
<CustomField>
    <fullName>travel_email_sent__c</fullName>
    <label>Type of Notification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Non-Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>