fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/Travel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Travel_Rate__c</fullName>
    <label>Travel Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>