fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/Travel_Required__c.field-meta.xml
<CustomField>
    <fullName>Travel_Required__c</fullName>
    <formula>OR(
ISPICKVAL( Education_Record__r.Hotel_Requested__c , &quot;Yes&quot;), 
ISPICKVAL( Education_Record__r.Travel_Type_Requested__c ,&quot;Flight&quot;), 
ISPICKVAL(Education_Record__r.Travel_Type_Requested__c,&quot;Train&quot;), 
ISPICKVAL(Education_Record__r.Car_Request__c,&quot;Car Rental Requested&quot;), 
ISPICKVAL(Education_Record__r.Car_Request__c,&quot;Taxi/Public Transportation&quot;))</formula>
    <label>Travel Required</label>
    <type>Checkbox</type>
</CustomField>