fullSandbox11072023/force-app/main/default/objects/Education_Contractor__c/fields/Workflow_Travel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Travel_Rate__c</fullName>
    <formula>/* Hourly */
if(
AND(
CONTAINS(TEXT(Engagement_Type__c), &quot;Hour&quot;),
Pay_Rate_Card__r.Travel_Eligible__c = TRUE
),
ROUND(Reimbursement_Rate__c/2,2),
/* Daily */
if(
AND(
CONTAINS(TEXT(Engagement_Type__c), &quot;Day&quot;),
Pay_Rate_Card__r.Travel_Eligible__c = TRUE
),
ROUND((Pay_Rate_Card__r.Inservice_Hour__c/2),2),  
0
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflow Travel Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>